--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             border: 2px solid var(--border-color);
             border-radius: 4px;
             box-shadow: 0 0 10px rgba(0,0,0,.5);
+            -webkit-user-select: none; /* Safari */
             user-select: none;
             display: block;
             outline: none;
